Avoid horizontal scrollbar in code snippets

--- a/src/main/css/extra.css
+++ b/src/main/css/extra.css
@@ -4,7 +4,7 @@
 }
 
 #header, #content, #footnotes {
-    max-width: 800px;
+    max-width: 940px;
 }
 
 html, body {
